[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/Battle/Cards/CardBase.gd" type="Script" id=1]
[ext_resource path="res://assets/Cards/card.png" type="Texture" id=2]
[ext_resource path="res://comici.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/Background/background shade.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 100
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = ExtResource( 3 )

[node name="CardBase" type="MarginContainer"]
margin_right = 250.0
margin_bottom = 350.0
rect_pivot_offset = Vector2( 125, 175 )
script = ExtResource( 1 )

[node name="Card" type="Sprite" parent="."]
position = Vector2( 125, 190 )
scale = Vector2( 1, 1.06857 )
texture = ExtResource( 2 )

[node name="Bar" type="VBoxContainer" parent="."]
margin_right = 250.0
margin_bottom = 380.0

[node name="TopGap" type="MarginContainer" parent="Bar"]
margin_right = 250.0
margin_bottom = 5.0
rect_min_size = Vector2( 0, 5 )

[node name="TopBar" type="HBoxContainer" parent="Bar"]
margin_top = 9.0
margin_right = 250.0
margin_bottom = 66.0

[node name="LeftGap" type="MarginContainer" parent="Bar/TopBar"]
margin_right = 10.0
margin_bottom = 57.0
rect_min_size = Vector2( 10, 50 )

[node name="Damage" type="MarginContainer" parent="Bar/TopBar"]
margin_left = 14.0
margin_right = 64.0
margin_bottom = 57.0
rect_min_size = Vector2( 50, 50 )

[node name="HBoxContainer" type="HBoxContainer" parent="Bar/TopBar/Damage"]
margin_right = 50.0
margin_bottom = 57.0

[node name="Damage" type="Label" parent="Bar/TopBar/Damage/HBoxContainer"]
margin_bottom = 57.0
custom_fonts/font = SubResource( 1 )

[node name="MidBar" type="HBoxContainer" parent="Bar"]
margin_top = 70.0
margin_right = 250.0
margin_bottom = 211.0

[node name="LeftGap" type="MarginContainer" parent="Bar/MidBar"]
margin_right = 85.0
margin_bottom = 141.0
rect_min_size = Vector2( 85, 0 )

[node name="CardName" type="MarginContainer" parent="Bar/MidBar"]
margin_left = 89.0
margin_right = 189.0
margin_bottom = 141.0
rect_min_size = Vector2( 100, 100 )

[node name="HBoxContainer" type="HBoxContainer" parent="Bar/MidBar/CardName"]
margin_right = 100.0
margin_bottom = 141.0

[node name="CardName" type="Label" parent="Bar/MidBar/CardName/HBoxContainer"]
margin_bottom = 141.0
custom_fonts/font = SubResource( 2 )

[node name="MidBar2" type="HBoxContainer" parent="Bar"]
margin_top = 215.0
margin_right = 250.0
margin_bottom = 305.0

[node name="LeftGap" type="MarginContainer" parent="Bar/MidBar2"]
margin_right = 10.0
margin_bottom = 90.0
rect_min_size = Vector2( 10, 50 )

[node name="Description" type="MarginContainer" parent="Bar/MidBar2"]
margin_left = 14.0
margin_right = 234.0
margin_bottom = 90.0
rect_min_size = Vector2( 220, 90 )

[node name="NinePatchRect" type="NinePatchRect" parent="Bar/MidBar2/Description"]
margin_right = 220.0
margin_bottom = 90.0
texture = ExtResource( 4 )

[node name="CenterContainer" type="CenterContainer" parent="Bar/MidBar2/Description"]
margin_right = 220.0
margin_bottom = 90.0

[node name="Description" type="Label" parent="Bar/MidBar2/Description/CenterContainer"]
margin_left = 10.0
margin_top = 20.0
margin_right = 210.0
margin_bottom = 70.0
rect_min_size = Vector2( 200, 50 )
custom_fonts/font = SubResource( 3 )
align = 1
autowrap = true

[node name="BotBar" type="HBoxContainer" parent="Bar"]
margin_top = 309.0
margin_right = 250.0
margin_bottom = 366.0

[node name="LeftGap" type="MarginContainer" parent="Bar/BotBar"]
margin_right = 10.0
margin_bottom = 57.0
rect_min_size = Vector2( 10, 0 )

[node name="Word" type="MarginContainer" parent="Bar/BotBar"]
margin_left = 14.0
margin_right = 64.0
margin_bottom = 57.0
rect_min_size = Vector2( 50, 50 )

[node name="HBoxContainer" type="HBoxContainer" parent="Bar/BotBar/Word"]
margin_right = 50.0
margin_bottom = 57.0

[node name="Word" type="Label" parent="Bar/BotBar/Word/HBoxContainer"]
margin_bottom = 57.0
custom_fonts/font = SubResource( 1 )

[node name="MidGap" type="MarginContainer" parent="Bar/BotBar"]
margin_left = 68.0
margin_right = 183.0
margin_bottom = 57.0
rect_min_size = Vector2( 115, 0 )

[node name="Draw" type="MarginContainer" parent="Bar/BotBar"]
margin_left = 187.0
margin_right = 237.0
margin_bottom = 57.0
rect_min_size = Vector2( 50, 50 )

[node name="HBoxContainer" type="HBoxContainer" parent="Bar/BotBar/Draw"]
margin_right = 50.0
margin_bottom = 57.0
alignment = 2

[node name="Draw" type="Label" parent="Bar/BotBar/Draw/HBoxContainer"]
margin_left = 50.0
margin_right = 50.0
margin_bottom = 57.0
custom_fonts/font = SubResource( 4 )
align = 2

[node name="MidGap" type="MarginContainer" parent="Bar"]
margin_top = 370.0
margin_right = 250.0
margin_bottom = 380.0
rect_min_size = Vector2( 0, 10 )

[node name="Focus" type="TextureButton" parent="."]
margin_right = 250.0
margin_bottom = 380.0
expand = true

[node name="Tween" type="Tween" parent="."]

[connection signal="mouse_entered" from="Focus" to="." method="_on_Focus_mouse_entered"]
[connection signal="mouse_exited" from="Focus" to="." method="_on_Focus_mouse_exited"]
